[tool.poetry]
name = "torch_semiring_einsum"
version = "1.0.0"
description = "Extensible PyTorch implementation of einsum that supports multiple semirings"
authors = ["Brian DuSell"]
license = "MIT"
repository = "https://github.com/bdusell/semiring-einsum"
homepage = "https://bdusell.github.io/semiring-einsum/"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]
sphinx = "^2.2"
sphinxcontrib-bibtex = "^1.0"
sphinx-autodoc-typehints = "^1.10"
numpy = "^1.21"
matplotlib = "^3.1"
twine = "^3.1"
wheel = "^0.33.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
