[tool.poetry]
name = "torch_semiring_einsum"
version = "1.0.0"
description = "Extensible PyTorch implementation of einsum that supports multiple semirings"
license = "MIT"
authors = ["Brian DuSell <bdusell@gmail.com>"]
readme = "README.md"
homepage = "https://bdusell.github.io/semiring-einsum/"
repository = "https://github.com/bdusell/semiring-einsum"
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics"
]

[tool.poetry.dependencies]
python = "^3.6.1"
torch = "^1.1.0"
typing-extensions = "^4.0.0"

[tool.poetry.dev-dependencies]
sphinx = "^2.4"
sphinxcontrib-bibtex = "^1.0"
sphinx-autodoc-typehints = "^1.10"
numpy = { version = "^1.23", python = ">=3.8" }
matplotlib = { version = "^3.5", python = ">=3.7" }
torch = { version = "^1.12", python = ">=3.7" }

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
